--- a/style/_contact.less
+++ b/style/_contact.less
@@ -13,7 +13,7 @@
 
     &-container {
         width: 100%;
-        .padding(0, 150, 0, 24);
+        .padding(0, 87, 0, 87);
     }
 
     &-subtitle {
@@ -88,6 +88,10 @@
         .margin-left(133);
         .letter-spacing(2);
     }
+}
+
+.map {
+    border: 0.1rem solid @black;
 }
 
 @media screen and (min-width: 600px ) and (max-width: 767px) {
